Update build for Java 21, add publishing setup